# hacks

./: README.md  tntwars_ez_items.sh
aoc-2017/: .gitignore  package.json
aoc-2017/src/: day1-p2.ts  day1.ts  day2-p2.ts  day2.ts  day3.ts
aoc-2019/: package.json
aoc-2019/src/: day1-p2.ts  day1.ts  day2-p1.ts  day2-p2.ts  day2.ts  day3-p2.ts  day3.ts  day4-p2.ts  day4.ts  day5.ts
aoc-2020/: .gitignore  Cargo.toml
aoc-2020-ts/: .gitignore
aoc-2020-ts/src/: day1.1.ts
aoc-2020/extras/: day11.js  day12.js  day3golf.js  day4speedrun.js  day8speedrun.js  day9notime.js
aoc-2020/src/: day1.2.ts  day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  (+6 more)
aoc-2021-rs/: .gitignore  Cargo.toml
aoc-2022/: .gitignore  package.json  shell.nix  start
bf-interperter/: README.md  package.json
fozziespace/: lvl3.js  lvl4.js  lvl5.js
genius-mpc-sidebar/: script.js  style.moz.css
git-ignore/: Makefile  git-ignore
hirust/: Cargo.toml
hn-hjkl/: script.js
lang/: package.json
mathtests/: Makefile  mathtests  mathtests.c  mathtests_ogl  shell.nix
mc-romprog/: Cargo.toml
minifluxkl/: README.txt  deploy.sh  index.js
mooosic/: .gitignore  a.c  bd.com
musictest/: Cargo.toml  shell.nix
nice-marked/: .gitignore  nicemarked.sh
nix-graphviz/: bin.js  default.nix  result
perldump/: optimal_void_feeding.pl
renderpls/: Cargo.toml  a.l
taco-bell-blogging/: gen.sh  index_template.html  style.css  template.html
text2midi/: Cargo.toml  shell.nix
text2midi/src/: main.rs  words.txt
tokioverlay/: bookmarklet.html  bookmarkletify.js  pull.js  userscript.js
(+29 files in other folders)
