[package]
name = "swoforte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
heapless = "0.7.16"
helgoboss-midi = { version = "0.4.0", features = ["serde"] }
jack = "0.10.0"
serde = "1.0.144"
